Improve .wp-caption and .sticky styling, add fix to prevent iframe overflow

--- a/src/assets/styles/base/base.styl
+++ b/src/assets/styles/base/base.styl
@@ -49,6 +49,10 @@ hr
   margin 1em 0
   padding 0
 
+// Prevent iframes from overflowing
+iframe
+  max-width 100%
+
 // Allow only vertical resizing of textareas
 textarea
   resize vertical
