--- a/src/assets/styles/base/wordpress.styl
+++ b/src/assets/styles/base/wordpress.styl
@@ -9,7 +9,7 @@
   border-top 10px solid $color-brand-pink
 
 .sticky
-  color $color-brand-pink
+  border-left 3px solid $color-brand-pink
 
 .alignleft,
 .alignright
@@ -25,10 +25,10 @@
   margin 5px 20px 20px 0
 
 .wp-caption
-  border 1px solid #f0f0f0
-  max-width 96%; // Image does not overflow the content area
-  padding 5px 3px 10px
   text-align center
+  max-width 96% // Image does not overflow the content area
+  background-color #eee
+  padding 5px 3px 10px
 
   img
     square(auto)
